find that 24.3% of data are positive, so a 74.7% acc means no use at all :(

--- a/self_attentive_sentence_embedding.ipynb
+++ b/self_attentive_sentence_embedding.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "(4800, 1200)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,15 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! Tokenizing Time=2.97s, #Sentences=4800\n",
-      "Done! Tokenizing Time=1.11s, #Sentences=1200\n"
+      "Done! Tokenizing Time=2.50s, #Sentences=4800\n",
+      "Done! Tokenizing Time=0.97s, #Sentences=1200\n"
      ]
     }
    ],
@@ -161,27 +161,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"Terrible How can you watch this the whole way through. It's not funny. The concept that the captain would take this crap from an officer is unbelievable. I stayed with it for at least 30 mins past when i wanted to smash the TV. It's awful. Ooh, I'm a fat person so watch me climb through a car window. Hilarious? ? I watch hundreds of movies and have never switched off a half hour in until now. I have never reviewed before and felt so angry about this rubbish that I had to say something. I realize (American spelling boo) now why it came onto amazon prime so quickly because it was so dire.\""
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25766666666666665\n"
+     ]
     }
    ],
    "source": [
-    "dataset[0][0]"
+    "cnt = 0\n",
+    "for data in dataset:\n",
+    "    cnt += data[2]\n",
+    "print(cnt/len(dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
       "FixedBucketSampler:\n",
       "  sample_num=4800, batch_num=78\n",
       "  key=[48, 76, 104, 132, 160, 188, 216, 244, 272, 300]\n",
-      "  cnt=[20, 135, 203, 273, 609, 595, 409, 298, 288, 1970]\n",
+      "  cnt=[25, 133, 189, 278, 593, 612, 421, 295, 288, 1966]\n",
       "  batch_size=[200, 126, 92, 72, 64, 64, 64, 64, 64, 64]\n"
      ]
     }
@@ -310,98 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(50, 300) (50, 300) (50,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 272) (64, 272) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 244) (64, 244) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 221) (64, 221) (64,)\n",
-      "(72, 216) (72, 216) (72,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 227) (64, 227) (64,)\n",
-      "(64, 211) (64, 211) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 229) (64, 229) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 203) (64, 203) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(19, 207) (19, 207) (19,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 219) (64, 219) (64,)\n",
-      "(64, 217) (64, 217) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(126, 219) (126, 219) (126,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(33, 192) (33, 192) (33,)\n",
-      "(20, 204) (20, 204) (20,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(19, 208) (19, 208) (19,)\n",
-      "(64, 227) (64, 227) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 272) (64, 272) (64,)\n",
-      "(64, 222) (64, 222) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(9, 156) (9, 156) (9,)\n",
-      "(72, 227) (72, 227) (72,)\n",
-      "(64, 272) (64, 272) (64,)\n",
-      "(64, 216) (64, 216) (64,)\n",
-      "(64, 216) (64, 216) (64,)\n",
-      "(64, 219) (64, 219) (64,)\n",
-      "(92, 218) (92, 218) (92,)\n",
-      "(92, 208) (92, 208) (92,)\n",
-      "(64, 215) (64, 215) (64,)\n",
-      "(64, 222) (64, 222) (64,)\n",
-      "(32, 272) (32, 272) (32,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 215) (64, 215) (64,)\n",
-      "(64, 272) (64, 272) (64,)\n",
-      "(64, 216) (64, 216) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(42, 243) (42, 243) (42,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(57, 227) (57, 227) (57,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 244) (64, 244) (64,)\n",
-      "(64, 221) (64, 221) (64,)\n",
-      "(64, 244) (64, 244) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 218) (64, 218) (64,)\n",
-      "(64, 212) (64, 212) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(64, 222) (64, 222) (64,)\n",
-      "(64, 227) (64, 227) (64,)\n",
-      "(64, 242) (64, 242) (64,)\n",
-      "(64, 221) (64, 221) (64,)\n",
-      "(64, 215) (64, 215) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(72, 229) (72, 229) (72,)\n",
-      "(64, 213) (64, 213) (64,)\n",
-      "(64, 300) (64, 300) (64,)\n",
-      "(25, 216) (25, 216) (25,)\n"
-     ]
-    }
-   ],
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# experiement one the two dataloaders\n",
-    "for left, right, label in train_dataloader:\n",
-    "    print(left.shape, right.shape, label.shape)"
+    "# for left, right, label in train_dataloader:\n",
+    "#    print(left.shape, right.shape, label.shape)"
    ]
   },
   {
@@ -431,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -488,13 +405,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "class WeightedSoftmaxCE(nn.HybridBlock):\n",
+    " ## this block is currently not used\n",
+    " classWeightedSoftmaxCE(nn.HybridBlock):\n",
     "    def __init__(self, sparse_label=True, from_logits=False,  **kwargs):\n",
     "        super(WeightedSoftmaxCE, self).__init__(**kwargs)\n",
     "        with self.name_scope():\n",
@@ -517,17 +432,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SelfAttentiveBiLSTM(nn.HybridBlock):\n",
-    "    def __init__(self, vocab_len, embsize, nhidden, nlayers, natt_unit, natt_hops, nfc, nclass,\n",
+    "    def __init__(self, vocab_len, embsize, nhidden, nlayers, natt_unit, natt_hops, \\\n",
+    "                 nfc, nclass, # these two params are not used currrently\n",
     "                 drop_prob, pool_way, prune_p=None, prune_q=None, **kwargs):\n",
     "        super(SelfAttentiveBiLSTM, self).__init__(**kwargs)\n",
     "        with self.name_scope():\n",
     "            self.embedding_layer = nn.Embedding(vocab_len, embsize)\n",
-    "            self.bilstm = rnn.LSTM(nhidden, num_layers=nlayers, dropout=drop_prob, bidirectional=True)\n",
+    "            self.bilstm = rnn.LSTM(nhidden, num_layers=nlayers, dropout=drop_prob, \\\n",
+    "                                   bidirectional=True)\n",
     "            self.att_encoder = SelfAttention(natt_unit, natt_hops)\n",
     "            ''' \n",
     "            BEGIN NOT_USED\n",
@@ -554,9 +471,11 @@
     "\n",
     "    def hybrid_forward(self, F, inp_left, inp_right):\n",
     "        # inp is a list containing left_text and right_text\n",
-    "        # input_embed: [batch, len, emsize]\n",
+    "        # their size: [batch, token_idx]\n",
+    "        # inp_embed_left/right size: [batch, seq_len, embed_size]\n",
     "        inp_embed_left = self.embedding_layer(inp_left)\n",
     "        inp_embed_right = self.embedding_layer(inp_right)\n",
+    "        # rnn requires the first dimension to be the time steps\n",
     "        h_output_left = self.bilstm(F.transpose(inp_embed_left, axes=(1, 0, 2)))\n",
     "        h_output_right = self.bilstm(F.transpose(inp_embed_right, axes=(1, 0, 2)))\n",
     "        # att_output: [batch, att_hops, emsize]\n",
@@ -597,13 +516,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "vocab_len = len(vocab)\n",
     "emsize = 200   # word embedding size\n",
-    "nhidden = 300    # lstm hidden_dim\n",
+    "nhidden = 200    # lstm hidden_dim\n",
     "nlayers = 2     # lstm layers\n",
     "natt_unit = 100     # the hidden_units of attention layer\n",
     "natt_hops = 3    # the channels of attention\n",
@@ -646,13 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_loss(x, y, model, loss, class_weight, penal_coeff):\n",
-    "    pred, att_left, att_right = model(x[0], x[1]) # att is [att_left, att_right]\n",
-    "    y = nd.array(y.asnumpy().astype('float32'), ctx=ctx)\n",
+    "    pred, att_left, att_right = model(x[0], x[1])\n",
+    "    y = nd.array(y.asnumpy().astype('float32')).as_in_context(ctx)\n",
     "    if loss_name == 'sce':\n",
     "        l = loss(pred, y)\n",
     "    elif loss_name == 'wsce':\n",
@@ -674,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,18 +641,18 @@
     "                                           penal_coeff)\n",
     "\n",
     "        # keep result for metric\n",
-    "        batch_pred = (batch_pred>.5).asnumpy()\n",
+    "        batch_pred = (batch_pred>.3).asnumpy()\n",
     "        batch_true = np.reshape(batch_y.asnumpy(), (-1, ))\n",
     "        total_pred.extend(batch_pred.tolist())\n",
     "        total_true.extend(batch_true.tolist())\n",
-    "\n",
+    "        \n",
     "        batch_loss = l.mean().asscalar()\n",
     "\n",
     "        n_batch += 1\n",
     "        loss_val += batch_loss\n",
     "\n",
     "        # check the result of traing phase\n",
-    "        if is_train and n_batch % 400 == 0:\n",
+    "        if is_train and n_batch % 100 == 0:\n",
     "            print('epoch %d, batch %d, batch_train_loss %.4f, batch_train_acc %.3f' %\n",
     "                  (epoch, n_batch, batch_loss, accuracy_score(batch_true, batch_pred)))\n",
     "\n",
@@ -754,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,17 +706,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "class_weight = None\n",
     "loss_name = 'l2'\n",
     "optim = 'adam'\n",
-    "lr = 0.1\n",
-    "penal_coeff = 0.1\n",
-    "clip = 2\n",
-    "nepochs = 4\n",
+    "lr = 0.01\n",
+    "penal_coeff = 0.01\n",
+    "clip = .5\n",
+    "nepochs = 5\n",
     "\n",
     "trainer = gluon.Trainer(model.collect_params(), optim, {'learning_rate': lr})\n",
     "\n",
@@ -813,32 +732,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1, learning_rate 0.10000 \n",
-      "\t train_loss 0.1443, acc_train 0.697, F1_train 0.654, \n",
-      "\t valid_loss 0.3646, acc_valid 0.271, F1_valid 0.115, \n",
-      "time 31.57 sec\n",
+      "epoch 1, learning_rate 0.01000 \n",
+      "\t train_loss 0.1506, acc_train 0.744, F1_train 0.634, \n",
+      "\t valid_loss 0.4031, acc_valid 0.263, F1_valid 0.110, \n",
+      "time 21.99 sec\n",
       "****************************************************************************************************\n",
-      "epoch 2, learning_rate 0.10000 \n",
-      "\t train_loss 0.1467, acc_train 0.682, F1_train 0.638, \n",
-      "\t valid_loss 0.3643, acc_valid 0.272, F1_valid 0.117, \n",
-      "time 31.59 sec\n",
+      "epoch 2, learning_rate 0.01000 \n",
+      "\t train_loss 0.1501, acc_train 0.744, F1_train 0.634, \n",
+      "\t valid_loss 0.4031, acc_valid 0.263, F1_valid 0.110, \n",
+      "time 21.81 sec\n",
       "****************************************************************************************************\n",
-      "epoch 3, learning_rate 0.09000 \n",
-      "\t train_loss 0.1432, acc_train 0.686, F1_train 0.645, \n",
-      "\t valid_loss 0.3646, acc_valid 0.271, F1_valid 0.115, \n",
-      "time 31.46 sec\n",
+      "epoch 3, learning_rate 0.00900 \n",
+      "\t train_loss 0.1494, acc_train 0.744, F1_train 0.634, \n",
+      "\t valid_loss 0.4031, acc_valid 0.263, F1_valid 0.110, \n",
+      "time 22.11 sec\n",
       "****************************************************************************************************\n",
-      "epoch 4, learning_rate 0.09000 \n",
-      "\t train_loss 0.1518, acc_train 0.690, F1_train 0.648, \n",
-      "\t valid_loss 0.3630, acc_valid 0.278, F1_valid 0.136, \n",
-      "time 31.64 sec\n",
+      "epoch 4, learning_rate 0.00900 \n",
+      "\t train_loss 0.1500, acc_train 0.744, F1_train 0.634, \n",
+      "\t valid_loss 0.4031, acc_valid 0.263, F1_valid 0.110, \n",
+      "time 22.05 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 5, learning_rate 0.00810 \n",
+      "\t train_loss 0.1489, acc_train 0.744, F1_train 0.634, \n",
+      "\t valid_loss 0.4031, acc_valid 0.263, F1_valid 0.110, \n",
+      "time 22.38 sec\n",
       "****************************************************************************************************\n"
      ]
     }
