refine markdown block in notebook

--- a/self_attentive_sentence_embedding.ipynb
+++ b/self_attentive_sentence_embedding.ipynb
@@ -4,18 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Structured Self-attentive Sentence Embedding\n",
+    "## Structured Self-attentive Sentence Embedding\n",
     "\n",
-    "After word embedding is applied to the representation of words, natural language processing(NLP) has been effectively improved in many ways. Along with the widespread use of word embedding, many techniques have been developed to express the semantics of sentences by words, such as:\n",
-    "1. The vector representation of multiple words in a sentence is concatenated or weighted to obtain a vector to represent the sentence.\n",
-    "2. Convolution(CNN) and maximum pooling(MaxPooling) on the matrix of all the word vectors of the sentence, using the final result to represent the semantics of the sentence.\n",
-    "3. Unroll the sentence according to the time step of the word, input the vector representation of each word into a recurrent neural network(RNN), and use the output of the last time step of the RNN as the semantic representation of the sentence.\n",
-    "\n",
-    "The above method solves the problem of sentence meaning in a certain extent in many aspects. When concatenating is used in method one, if the word of the sentence is too long and the vector dimension of the word is slightly larger, then the vector dimension of the sentence will be particularly large, and the internal interaction between the words of the sentence is not taken into account. The use of weighted averaging is not accurate and does not adequately express the impact of each word on sentence semantics. Many useful word meanings may be lost in Method2. The third method selects the output of the last step. If the sentence is too long, the output of the last step does not accurately express the semantics of the sentence.\n",
-    "\n",
-    "Based on the above mentioned method, Zhouhan Lin, Minwei Feng et al. published a paper [A Structured Self-attentive Sentence Embedding](https://arxiv.org/pdf/1703.03130.pdf)[1] in 2017, proposed a method based on self-attention structure for sentence embedding and applied to user's reviews classification, textual entailment and other tasks. In the end, good results were obtained.\n",
-    "\n",
-    "In this tutorial, we will use [GluonNLP](https://gluon-nlp.mxnet.io/index.html) to reproduce the model structure in \"A Structured Self-attentive Sentence Embedding\" and apply it to [Yelp Data's review star rating data set](https://www.yelp.com/dataset/challenge) for classification.\n",
+    "The code is based on [gluon-nlp tutorial](https://gluon-nlp.mxnet.io/examples/sentence_embedding/self_attentive_sentence_embedding.html).\n",
     "\n",
     "## Import Related Packages"
    ]
@@ -57,10 +48,9 @@
    "source": [
     "## Data pipeline\n",
     "\n",
-    "### Load The Reviews of Yelp Data\n",
+    "### Load Dataset\n",
     "\n",
-    "[Yelp users' review dataset](https://www.kaggle.com/yelp-dataset/yelp-dataset) is formatted as json. The original paper selected 500K documents as the training set, 2K as the validation set, and 2Kas the test set. For easier reproducibility of the experiment, we subsampled 198K documents from this dataset as training set and 2K documents as validation set.\n",
-    "Each sample in the data is a user's comment, the language is English, and each comment category is marked 1-5, representing 5 different emotional colors."
+    "See [dataloader](data_loader.ipynb) for how the training samples are obtained."
    ]
   },
   {
@@ -727,7 +717,7 @@
    "metadata": {},
    "source": [
     "## Train\n",
-    "Now that we are training the model, we use WeightedSoftmaxCE to alleviate the problem of data category imbalance. We performed statistical analysis on the data in advance to get a set of class_weight."
+    "Now that we are training the model, we use WeightedSoftmaxCE to alleviate the problem of data category imbalance."
    ]
   },
   {
@@ -950,7 +940,7 @@
    "metadata": {},
    "source": [
     "## Predict\n",
-    "Now we will randomly input a sentence into the model and predict its emotional value tag. The range of emotional markers is 1-5, which corresponds to the degree of negative to positive."
+    "Now we will randomly input a movie plot summary and its review to see if the model decide the review is a spoiler or not."
    ]
   },
   {
