--- a/self_attentive_sentence_embedding.ipynb
+++ b/self_attentive_sentence_embedding.ipynb
@@ -334,10 +334,10 @@
     "## Model Structure\n",
     "\n",
     "In the original paper, the representation of the sentence is: firstly, the sentence is disassembled into a list corresponding to the word, then the words are unrolled in order, and the word vector of each word is calculated as the input of each step of the [bidirectional LSTM neural network layer](https://www.bioinf.jku.at/publications/older/2604.pdf)[3]. Taking the output of each step of the bidirectional LSTM network layer, a matrix H is obtained. Suppose the hidden_dim of the bidirectional LSTM is `u`, the word length of the sentence is `n`, then the dimension of the last H is `n-by-2u`.  For example, the sentence \"this movie is amazing\" would be represented as:\n",
-    "![](Bi-LSTM-Rep.png)\n",
+    "![](images/Bi-LSTM-Rep.png)\n",
     "\n",
     "Attention is like when we are looking at things, we always give different importance to things in the scope of the perspective. For example, when we are communicating with people, our eyes will always pay more attention to the face of the communicator, not to the edge of other perspectives. So when we want to express the sentence, we can pay different attention to the output H of the bidirectional LSTM layer.\n",
-    "![](attention-nlp.png)\n",
+    "![](images/attention-nlp.png)\n",
     "$$\n",
     "A = Softmax(W_{s2}tanh(W_{s1}H^T))\n",
     "$$\n",
