fix bug in final output layer

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,54 +66,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>151931</th>\n",
+       "      <th>410289</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0478304</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2011-11-05</td>\n",
-       "      <td>Someone owes me 139 minutes of my life back, I...</td>\n",
-       "      <td>Very seldom, and by seldom I mean never, do I ...</td>\n",
-       "      <td>ur29000275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167297</th>\n",
-       "      <td>True</td>\n",
-       "      <td>tt0948470</td>\n",
+       "      <td>tt0396171</td>\n",
        "      <td>4</td>\n",
-       "      <td>2012-07-20</td>\n",
-       "      <td>Didn't really do it for me</td>\n",
-       "      <td>I didn't really like this version, don't get m...</td>\n",
-       "      <td>ur23522411</td>\n",
+       "      <td>2007-11-29</td>\n",
+       "      <td>Don't let this film prevent you from reading t...</td>\n",
+       "      <td>The novel by Patrick Süskind on which the scri...</td>\n",
+       "      <td>ur17559125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>208761</th>\n",
+       "      <th>510061</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt1843866</td>\n",
+       "      <td>tt0110148</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2002-01-22</td>\n",
+       "      <td>Apparently, Vampires Don't Fear CHEESE, Either!!!</td>\n",
+       "      <td>Let me begin by saying that I have never read ...</td>\n",
+       "      <td>ur1542448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312153</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0289043</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2003-04-27</td>\n",
+       "      <td>It's all been done before</td>\n",
+       "      <td>This story has been done so many times, it's h...</td>\n",
+       "      <td>ur2347354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182045</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt1663662</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2013-07-13</td>\n",
+       "      <td>Cancelling the apocalypse has never looked so ...</td>\n",
+       "      <td>The publicity for Guillermo del Toro's robots ...</td>\n",
+       "      <td>ur22164449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>491546</th>\n",
+       "      <td>True</td>\n",
+       "      <td>tt0102526</td>\n",
        "      <td>9</td>\n",
-       "      <td>2015-08-31</td>\n",
-       "      <td>Till the end of the road.</td>\n",
-       "      <td>Stonking! Now this is more like it, after the ...</td>\n",
-       "      <td>ur16161013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>365587</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt0369339</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2004-12-30</td>\n",
-       "      <td>Simply amazing</td>\n",
-       "      <td>For a \"hit-man\" movie I give this film a 10 ou...</td>\n",
-       "      <td>ur4187577</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179746</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt1170358</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2013-12-28</td>\n",
-       "      <td>As Awesome as the first part.</td>\n",
-       "      <td>I was satisfied with the first entry in the tr...</td>\n",
-       "      <td>ur34875353</td>\n",
+       "      <td>2017-05-28</td>\n",
+       "      <td>Wesley Snipes is brilliant</td>\n",
+       "      <td>This movie is unlike any other gangster movie ...</td>\n",
+       "      <td>ur33697153</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,34 +121,34 @@
       ],
       "text/plain": [
        "        is_spoiler   movie_id  rating review_date  \\\n",
-       "151931       False  tt0478304       1  2011-11-05   \n",
-       "167297        True  tt0948470       4  2012-07-20   \n",
-       "208761       False  tt1843866       9  2015-08-31   \n",
-       "365587       False  tt0369339      10  2004-12-30   \n",
-       "179746       False  tt1170358       9  2013-12-28   \n",
+       "410289       False  tt0396171       4  2007-11-29   \n",
+       "510061       False  tt0110148       4  2002-01-22   \n",
+       "312153       False  tt0289043       3  2003-04-27   \n",
+       "182045       False  tt1663662       8  2013-07-13   \n",
+       "491546        True  tt0102526       9  2017-05-28   \n",
        "\n",
        "                                           review_summary  \\\n",
-       "151931  Someone owes me 139 minutes of my life back, I...   \n",
-       "167297                         Didn't really do it for me   \n",
-       "208761                          Till the end of the road.   \n",
-       "365587                                     Simply amazing   \n",
-       "179746                      As Awesome as the first part.   \n",
+       "410289  Don't let this film prevent you from reading t...   \n",
+       "510061  Apparently, Vampires Don't Fear CHEESE, Either!!!   \n",
+       "312153                          It's all been done before   \n",
+       "182045  Cancelling the apocalypse has never looked so ...   \n",
+       "491546                         Wesley Snipes is brilliant   \n",
        "\n",
        "                                              review_text     user_id  \n",
-       "151931  Very seldom, and by seldom I mean never, do I ...  ur29000275  \n",
-       "167297  I didn't really like this version, don't get m...  ur23522411  \n",
-       "208761  Stonking! Now this is more like it, after the ...  ur16161013  \n",
-       "365587  For a \"hit-man\" movie I give this film a 10 ou...   ur4187577  \n",
-       "179746  I was satisfied with the first entry in the tr...  ur34875353  "
+       "410289  The novel by Patrick Süskind on which the scri...  ur17559125  \n",
+       "510061  Let me begin by saying that I have never read ...   ur1542448  \n",
+       "312153  This story has been done so many times, it's h...   ur2347354  \n",
+       "182045  The publicity for Guillermo del Toro's robots ...  ur22164449  \n",
+       "491546  This movie is unlike any other gangster movie ...  ur33697153  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_reviews = pd.read_json('./data/IMDB_reviews.json', lines=True).\\\n",
+    "df_reviews = pd.read_json('./data/imdb/IMDB_reviews.json', lines=True).\\\n",
     "             drop_duplicates('review_text').sample(frac=1)\n",
     "df_reviews.review_date = pd.to_datetime(df_reviews.review_date, infer_datetime_format=True)\n",
     "df_reviews.user_id = df_reviews.user_id.astype('category')\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,29 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-cab53c94822a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'the average number of words in a review is %d'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlength_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mdf_reviews\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the average number of words in a review is: 303\n"
      ]
     }
    ],
    "source": [
-    "print('the average number of words in a review is %d' % \\\n",
-    "      (round(sum(length_list[0]) / df_reviews.shape[0]))"
+    "print('the average number of words in a review is:', round(sum(length_list) / df_reviews.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -341,14 +336,14 @@
        "1571                                                        4.0   1999-01-29  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# imdb information about the movies\n",
-    "df_movies = pd.read_json('./data/IMDB_movie_details.json', lines=True)\n",
+    "df_movies = pd.read_json('./data/imdb/IMDB_movie_details.json', lines=True)\n",
     "df_movies.release_date = pd.to_datetime(df_movies.release_date, infer_datetime_format=True)\n",
     "print(df_movies.shape)\n",
     "df_movies.tail()"
@@ -356,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -420,37 +415,37 @@
        "    <tr>\n",
        "      <th>573380</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0478304</td>\n",
-       "      <td>Someone owes me 139 minutes of my life back, I...</td>\n",
-       "      <td>The impressionistic story of a Texas family in...</td>\n",
+       "      <td>tt0396171</td>\n",
+       "      <td>Don't let this film prevent you from reading t...</td>\n",
+       "      <td>Jean-Baptiste Grenouille came into the world u...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573381</th>\n",
-       "      <td>True</td>\n",
-       "      <td>tt0948470</td>\n",
-       "      <td>Didn't really do it for me I didn't really lik...</td>\n",
-       "      <td>Peter Parker (Garfield) is an outcast high sch...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0110148</td>\n",
+       "      <td>Apparently, Vampires Don't Fear CHEESE, Either...</td>\n",
+       "      <td>It hasn't even been a year since a plantation ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573382</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt1843866</td>\n",
-       "      <td>Till the end of the road. Stonking! Now this i...</td>\n",
-       "      <td>For Steve Rogers, awakening after decades of s...</td>\n",
+       "      <td>tt0289043</td>\n",
+       "      <td>It's all been done before This story has been ...</td>\n",
+       "      <td>Animal activists invade a laboratory with the ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573383</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0369339</td>\n",
-       "      <td>Simply amazing For a \"hit-man\" movie I give th...</td>\n",
-       "      <td>LA cabbie Max Durocher is the type of person w...</td>\n",
+       "      <td>tt1663662</td>\n",
+       "      <td>Cancelling the apocalypse has never looked so ...</td>\n",
+       "      <td>When monstrous creatures, known as Kaiju, star...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573384</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt1170358</td>\n",
-       "      <td>As Awesome as the first part. I was satisfied ...</td>\n",
-       "      <td>After successfully crossing over (and under) t...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>tt0102526</td>\n",
+       "      <td>Wesley Snipes is brilliant This movie is unlik...</td>\n",
+       "      <td>The gangster Nino has a gang who call themselv...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -458,28 +453,28 @@
       ],
       "text/plain": [
        "        is_spoiler   movie_id  \\\n",
-       "573380       False  tt0478304   \n",
-       "573381        True  tt0948470   \n",
-       "573382       False  tt1843866   \n",
-       "573383       False  tt0369339   \n",
-       "573384       False  tt1170358   \n",
+       "573380       False  tt0396171   \n",
+       "573381       False  tt0110148   \n",
+       "573382       False  tt0289043   \n",
+       "573383       False  tt1663662   \n",
+       "573384        True  tt0102526   \n",
        "\n",
        "                                              review_text  \\\n",
-       "573380  Someone owes me 139 minutes of my life back, I...   \n",
-       "573381  Didn't really do it for me I didn't really lik...   \n",
-       "573382  Till the end of the road. Stonking! Now this i...   \n",
-       "573383  Simply amazing For a \"hit-man\" movie I give th...   \n",
-       "573384  As Awesome as the first part. I was satisfied ...   \n",
+       "573380  Don't let this film prevent you from reading t...   \n",
+       "573381  Apparently, Vampires Don't Fear CHEESE, Either...   \n",
+       "573382  It's all been done before This story has been ...   \n",
+       "573383  Cancelling the apocalypse has never looked so ...   \n",
+       "573384  Wesley Snipes is brilliant This movie is unlik...   \n",
        "\n",
        "                                             plot_summary  \n",
-       "573380  The impressionistic story of a Texas family in...  \n",
-       "573381  Peter Parker (Garfield) is an outcast high sch...  \n",
-       "573382  For Steve Rogers, awakening after decades of s...  \n",
-       "573383  LA cabbie Max Durocher is the type of person w...  \n",
-       "573384  After successfully crossing over (and under) t...  "
+       "573380  Jean-Baptiste Grenouille came into the world u...  \n",
+       "573381  It hasn't even been a year since a plantation ...  \n",
+       "573382  Animal activists invade a laboratory with the ...  \n",
+       "573383  When monstrous creatures, known as Kaiju, star...  \n",
+       "573384  The gangster Nino has a gang who call themselv...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,11 +500,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.to_csv('./data/train.csv', index=False)"
+    "df_train.to_csv('./data/train.csv', sep='|', index=False)"
    ]
   }
  ],
